--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,4 @@
 @import url(./_settings.css);
 @import url(./signup.css);
 @import url(./login.css);
-@import './chatPage.css';
+@import url(./chatPage.css);
