correction du footer et pop-up historique

--- a/styles/chatPage.css
+++ b/styles/chatPage.css
@@ -78,9 +78,7 @@ header.main{
     margin-top: 30px;
     height: 95vh;
     display: flex;
-    border-bottom: 10px solid green;
     /* background-color: tan; */
-
 }
 /* historique de conversation  */
 .main .historique{
@@ -244,7 +242,7 @@ header.main .chat-box form label:hover{
 /* POP-UPS SCRIPTS  */
 .historique-pop{
     top: 110px;
-    left: 150px;
+    left: 300px;
     height: 0;
     width: 150px;
     position: absolute;
@@ -285,6 +283,9 @@ header.main .chat-box form label:hover{
     }
     .main .historique .top-box{
         height: 50px;
+    }
+    .historique-pop{
+    left: 150px;
     }
 }
 /* responsive  */
